--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -1032,10 +1032,12 @@ MESOS_NETWORK_ISOLATOR_FILES +=						\
   slave/containerizer/mesos/isolators/network/port_mapping.hpp
 
 MESOS_NVIDIA_GPU_ISOLATOR_FILES =					\
+  slave/containerizer/mesos/isolators/gpu/allocator.cpp			\
   slave/containerizer/mesos/isolators/gpu/nvidia.cpp			\
   slave/containerizer/mesos/isolators/gpu/nvml.cpp
 
 MESOS_NVIDIA_GPU_ISOLATOR_FILES +=					\
+  slave/containerizer/mesos/isolators/gpu/allocator.hpp			\
   slave/containerizer/mesos/isolators/gpu/nvidia.hpp 			\
   slave/containerizer/mesos/isolators/gpu/nvml.hpp
 
